SonicExcel 第④档：列宽自适应 / CSV 通道 / 错误报告 / 导入模板下拉（215 条测试）
四项增强，都是文档 §12 承诺过的，本档一次做完。

列宽按数据自适应（§7.4）：
约束是硬的 —— <cols> 在第一次 flush 时一次性写出，之后再调 width() 毫无效果。
所以采样只能取前 100 行（必须远小于 flushEvery 的 1000），并在三个时机强制落定：
采样满、每次 flush 前、finish() 前（行数不足 100 的小表走最后这条）。
实现时先写错了一版：显式 @SonicTitle(width=12) 也被加了 2 的余量，用户写 12 拿到 14。
被测试抓出来后改成显式值原样透传 —— 框架偷偷改掉用户明确指定的东西是最难排查的那类问题。

CSV 通道（§7.7）：
与 xlsx 共用 SheetMeta 和转换器，同一个 DTO 注解一份、两种格式都能导。
真·千万级用它：xlsx 光 Deflate 就是分钟级，还有单表 1,048,576 行的硬上限。
两个不写就要被投诉的细节：默认写 UTF-8 BOM（不写这三个字节，Excel 打开中文 CSV 就是乱码），
BigDecimal 走 toPlainString（否则大数写成科学计数，下游再读解析不回原值）。
顺带把行转换 + 错误策略抽成 RowConverter，xlsx 和 CSV 共用，省得错误策略在两处慢慢长歪。

错误报告导出（§6）：
SonicExcel.writeErrorReport(os, errors) 把行级错误清单本身导成 xlsx。500 行里 30 行有问题时，
与其在页面上堆一段截断的文字，不如给个能直接打开、逐条对照修改的文件。行号已换算成
用户在 Excel 里肉眼可见的编号。

导入模板 + 下拉校验（§8.6）：
表头 + 可选示例行 + 数据有效性。下拉是防脏数据最划算的一招 —— 用户根本填不出非法值。
选项来源 @SonicOptions：字面量，或 provider（实例解析规则同转换器，Bean 优先）。
SonicEnumOptionProvider 复用字段上已有的 @SonicEnum，枚举加一项模板下拉自动跟着变，
不会出现「代码改了模板没改」的漂移。
两处坑已固化成测试：fastexcel 只能写内联列表，选项含逗号/引号会把 formula1 撕开，直接跳过并告警；
Excel 对 formula1 有 255 字符上限，超了整个文件被判定损坏，所以超长时跳过下拉、保住文件可用。

注：还没有对外的模板下载接口。加 /goods/importTemplate 这类端点要配权限和前端入口，
属于产品决策，不在本轮范围；框架能力已就绪，接上去只是几行 Controller。

clean 后全量 215 条通过。至此四档全部完成，文档 §14 只剩 D10（字典转换器的导入方向）。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>